--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -9,104 +9,20 @@
 <body class="white-text">
 	<h1 class="center-whole"> OverWatch </h1>
 	<h2> <img class="small-pic overwatch-logo" src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951"> </h2>
-	<div class="red-outline">
-		<div class="left-side">
-			<span class="damage-headline-left"> Damage </span><span class="player-headline-right"> Logan </span> 
-			<br>
-			<span class="gamertag-headline"> RinoSlayer </span>
-			<br>
-			<div class="white-outline">
-			Always locks in DPS and ... maybe ... gets some kills?
-			</div>
-		</div>
-		<div class="right-side">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba906">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Pharah.png?version=a0a08fbbb4e169a029baa071839d30a2">
-		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/75/Icon-Zarya.png?version=e5cb43dd5f8314172d8b0c9f537ef2c9">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/54/Icon-Widowmaker.png?version=becc817c0208b989eb7fae437c95b752">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
-		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
-		</div>
-	</div>
-	<br>
-	<div class="red-outline">
-		<div class="left-side">
-		<span class="damage-headline-left"> Damage </span><span class="player-headline-right"> ??? </span> <br><br>
-		</div>
-		<div class="right-side">
-		</div>
-	</div>
-	<br>
-	<div class="blue-outline">
-		<div class="left-side">
-			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Jeremiyah </span><span class="damage-headline-right"> Damage </span> 
-			<br>
-			<span class="gamertag-headline"> Jesus was OK </span>
-			<br>
-			<div class="white-outline">
-			Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
-			</div>
-		</div>
-		<div class="right-side">
-		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f8/Icon-Winston.png?version=3fe1e65e547fa377b0a67e9ae8521174"> 
-		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba9068178dc92fc622">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/1c/Icon-Genji.png?version=82b57d7ca3f32cc4f7286d309db7a716">
-		<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
-		</div>
-	</div>
-	<br>	
-	<div class="blue-outline">
-		<div class="left-side">
-			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Joshuah </span><span class="damage-headline-right"> Damage </span>
-			<br>
-			<span class="gamertag-headline"> WhiteWadeWilson </span>
-			<br>
-			<div class="white-outline">
-			A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
-			</div>
-		</div>
-		<div class="right-side">
-			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
-			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">		
-			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
-		</div>
-	</div>
-	<br>
-		<div class="blue-outline">
-		<div class="left-side">
-			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Hugh </span><span class="support-headline-right"> Support </span> 
-			<br>
-			<span class="pctag-headline"> pippinish33 </span>
-			<br>
-			<div class="white-outline">
-			Flexible player who often fills in order to give the team what is needed to win.
-			</div>
-		</div>
-		<div class="right-side">
-			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
-			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
-			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
-			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">
-			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
-			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
-		</div>
-	</div>
-	<br>
 	<div class="yellow-outline">
-		<div class="left-side">
+		<div class="left-side-ow">
 			<span class="support-headline-left"> Support </span><span class="player-headline-mid"> Brandon </span><span class="tank-headline-right"> Tank </span> 
 			<br>
-			<span class="gamertag-headline"> SoCcErNeMeSiS 8 </span>
+			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> SoCcErNeMeSiS 8 </span>
 			<br>
-			<div class="white-outline">
+			<span class="pc-headline"> PC </span><span class="pc-gamertag"> BlueBrandon</span>
+			<br>
+			<div class="gray-outline">
 			Selfless teammate. Constantly monitoring teammates' health in order to provide the stamina for each battle.
 			</div>
 			<br>
-			<img class="overwatch-small"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
 		</div>
-		<div class="right-side">
+		<div class="right-side-ow">
 			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f7/Icon-Zenyatta.png?version=5067df480f689692dc522b679d9e3687">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">		
@@ -115,5 +31,81 @@
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
 		</div>
 	</div>	
+	<div class="red-outline container">
+		<div class="left-side-ow">
+			<span class="damage-headline-left"> Damage </span><span class="player-headline-mid"> Logan </span><span class="tank-headline-right"> Tank </span> 
+			<br>
+			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> RinoSlayer </span>
+			<br>
+			<div class="gray-outline">
+			Always locks in DPS and ... maybe ... gets some kills?
+			</div>
+		</div>
+		<div class="right-side-ow">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba906">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Pharah.png?version=a0a08fbbb4e169a029baa071839d30a2">
+		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/75/Icon-Zarya.png?version=e5cb43dd5f8314172d8b0c9f537ef2c9">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/54/Icon-Widowmaker.png?version=becc817c0208b989eb7fae437c95b752">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
+		</div>
+	</div>
+	<div class="blue-outline">
+		<div class="left-side-ow">
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Jeremiyah </span><span class="damage-headline-right"> Damage </span> 
+			<br>
+			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> Jesus was OK </span>
+			<br>
+			<div class="gray-outline">
+			Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
+			</div>
+		</div>
+		<div class="right-side-ow">
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f8/Icon-Winston.png?version=3fe1e65e547fa377b0a67e9ae8521174"> 
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba9068178dc92fc622">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/1c/Icon-Genji.png?version=82b57d7ca3f32cc4f7286d309db7a716">
+		<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
+		</div>
+	</div>	
+	<div class="blue-outline">
+		<div class="left-side-ow">
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Joshuah </span><span class="damage-headline-right"> Damage </span>
+			<br>
+			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> WhiteWadeWilson </span>
+			<br>
+			<div class="gray-outline">
+			A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
+			</div>
+		</div>
+		<div class="right-side-ow">
+			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">		
+			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">		
+			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+		</div>
+	</div>
+	<div class="blue-outline">
+		<div class="left-side-ow">
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Hugh </span><span class="support-headline-right"> Support </span> 
+			<br>
+			<span class="pc-headline"> PC </span><span class="pc-gamertag"> pippinish33 </span>
+			<br>
+			<div class="gray-outline">
+			Flexible player who often fills in order to give the team what is needed to win.
+			</div>
+		</div>
+		<div class="right-side-ow">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
+			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">
+			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
+		</div>
+	</div>
 </body>
 </html>
