--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<lang html>
 <head>
 	<title> Brandon's Webpage </title>
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
-	<script type="text/javascript">
+	<script>
 		var imageNum = 0;
 		var pictures = ['https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg',
 						'https://ih0.redbubble.net/image.98538055.2991/flat,1000x1000,075,f.u1.jpg',
@@ -59,7 +59,7 @@
 	</script>
 </head>
 <body>
-	<h1> Brandon C. Ruoff <h1>
+	<h1> Brandon C. Ruoff </h1>
 
 	<p class="center-whole">
 		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
