--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<lang html>
 <head>
-	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's Overwatch Page</title>
+	<a href="../index.html" class="gray-button"> Back </a>
 	<link rel="stylesheet" href="../styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
-<body class="white-text">
-	<h1 class="center-whole"> OverWatch </h1>
+<body>
+	<h1 class="center-whole"> Overwatch </h1>
 	<h2> <img class="small-pic overwatch-logo" src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951"> </h2>
 	<div class="yellow-outline">
 		<div class="left-side-ow">
@@ -17,10 +17,9 @@
 			<br>
 			<span class="pc-headline"> PC </span><span class="pc-gamertag"> BlueBrandon</span>
 			<br>
-			<div class="gray-outline">
+			<div class="gray-outline white-text">
 			Selfless teammate. Constantly monitoring teammates' health in order to provide the stamina for each battle.
 			</div>
-			<br>
 		</div>
 		<div class="right-side-ow">
 			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f7/Icon-Zenyatta.png?version=5067df480f689692dc522b679d9e3687">
@@ -31,32 +30,13 @@
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
 		</div>
 	</div>	
-	<div class="red-outline container">
-		<div class="left-side-ow">
-			<span class="damage-headline-left"> Damage </span><span class="player-headline-mid"> Logan </span><span class="tank-headline-right"> Tank </span> 
-			<br>
-			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> RinoSlayer </span>
-			<br>
-			<div class="gray-outline">
-			Always locks in DPS and ... maybe ... gets some kills?
-			</div>
-		</div>
-		<div class="right-side-ow">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba906">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Pharah.png?version=a0a08fbbb4e169a029baa071839d30a2">
-		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/75/Icon-Zarya.png?version=e5cb43dd5f8314172d8b0c9f537ef2c9">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/54/Icon-Widowmaker.png?version=becc817c0208b989eb7fae437c95b752">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
-		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
-		</div>
-	</div>
 	<div class="blue-outline">
 		<div class="left-side-ow">
 			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Jeremiyah </span><span class="damage-headline-right"> Damage </span> 
 			<br>
 			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> Jesus was OK </span>
 			<br>
-			<div class="gray-outline">
+			<div class="gray-outline white-text">
 			Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
 			</div>
 		</div>
@@ -75,7 +55,7 @@
 			<br>
 			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> WhiteWadeWilson </span>
 			<br>
-			<div class="gray-outline">
+			<div class="gray-outline white-text">
 			A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
 			</div>
 		</div>
@@ -94,7 +74,7 @@
 			<br>
 			<span class="pc-headline"> PC </span><span class="pc-gamertag"> pippinish33 </span>
 			<br>
-			<div class="gray-outline">
+			<div class="gray-outline white-text">
 			Flexible player who often fills in order to give the team what is needed to win.
 			</div>
 		</div>
@@ -105,6 +85,25 @@
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">
 			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
+		</div>
+	</div>
+	<div class="red-outline">
+		<div class="left-side-ow">
+			<span class="damage-headline-left"> Damage </span><span class="player-headline-mid"> Logan </span><span class="tank-headline-right"> Tank </span> 
+			<br>
+			<span class="xbox-headline"> XBOX </span><span class="xbox-gamertag"> RinoSlayer </span>
+			<br>
+			<div class="gray-outline white-text">
+			Always locks in DPS and ... maybe ... gets some kills?
+			</div>
+		</div>
+		<div class="right-side-ow">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba906">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Pharah.png?version=a0a08fbbb4e169a029baa071839d30a2">
+		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/75/Icon-Zarya.png?version=e5cb43dd5f8314172d8b0c9f537ef2c9">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/54/Icon-Widowmaker.png?version=becc817c0208b989eb7fae437c95b752">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
 		</div>
 	</div>
 </body>
