--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<lang html>
 <head>
-	<a href="../index.html" class="gray-button"> Back </a>	
 	<title>Brandon's Piano Page</title>
+	<a href="../index.html" class="gray-button"> Back </a>	
 	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
@@ -64,6 +64,8 @@
 		<li> <a href="piano/Ark_Death_Theme.pdf"> Ark Death Theme </a> </li>
 		</ul>
 	</div>
+	<div>
+	* Still practicing to perfect
+	</div>
 </body>
-* Still practicing to perfect
 </html>
