--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
+<lang html>
 <head>
-	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's Pok&eacute;mon Page</title>
 	<link rel="stylesheet" href="../styles.css">
+	<a href="../index.html" class="gray-button"> Back </a>
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
-	<h1> Pok&eacute;mon </h2>
+	<h1> Pok&eacute;mon </h1>
 	<br>
-	
-	
 	<div class="container">
 		<div class="center-whole white-outline left-side-poke">
 			<h2> Great Sites for Pok&eacute;mon info </h1>
@@ -84,12 +82,8 @@
 						<img class="poke-game-cover" src="https://images-na.ssl-images-amazon.com/images/I/81GOkVv8rOL._AC_SL1500_.jpg"></td>
 						<td>Most unique gameplay<br><br>Most difficult (Ultra Sun/Moon)</td>
 						<td>...</td>
-
-
-
 				</tr>
 				</tbody>
-				
 			</table>
 			</div>
 			
