--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<lang html>
 <head>
-	<a href="../index.html" class="gray-button"> Back </a>	
 	<title> Brandon's Art Page </title>
+	<a href="../index.html" class="gray-button"> Back </a>	
 	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 	<h1> Art </h1>
 	<div class="center-whole">
-		<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft </h2>
+		<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft </a> </h2>
 		<h3> Mario Kart 7  - Rainbow Road </h3>
 		Click image to view more
 		<br>
@@ -20,26 +20,26 @@
 	<div class="center-whole">
 		<h2 class="white-text"> Pencil </h2>
 		<div>
-			<img width="300px" src="art/colored-pencil/erupt.jpeg">
-			<img width="300px" src="art/colored-pencil/mega-bronzong.jpg">
-			<img width="300px" src="art/colored-pencil/mega-friends.JPG">
-			<img width="300px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
-			<img width="300px" src="art/colored-pencil/tracer-pencil.JPG">
-			<img width="300px" src="art/colored-pencil/rob-pencil.JPG">
+			<img width="300" src="art/colored-pencil/erupt.jpeg">
+			<img width="300" src="art/colored-pencil/mega-bronzong.jpg">
+			<img width="300" src="art/colored-pencil/mega-friends.JPG">
+			<img width="300" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
+			<img width="300" src="art/colored-pencil/tracer-pencil.JPG">
+			<img width="300" src="art/colored-pencil/rob-pencil.JPG">
 		</div>
 	</div>
 	
 	<div class="center-whole">
 		<h2 class="white-text"> Permanent Marker </h2>
 		<div>
-			<img width="250px" src="art/perm-marker/drugs.jpg">
+			<img width="250" src="art/perm-marker/drugs.jpg">
 		</div>
 	</div>
 	
 	<div class="center-whole">
 		<h2 class="white-text"> Adobe Illustrator </h2>
 		<div>
-			<img width="250px" src="art/adobe-illustrator/giesteon-ai.jpeg">
+			<img width="250" src="art/adobe-illustrator/giesteon-ai.jpeg">
 		</div>
 	</div>
 	
