--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<lang html>
+<html>
 <head>
 	<title> Brandon's Art Page </title>
 	<a href="../index.html" class="gray-button"> Back </a>	
