--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<lang html>
+<html>
 <head>
 	<title>Brandon's Pok&eacute;mon Page</title>
 	<link rel="stylesheet" href="../styles.css">
