--- a/index.html
+++ b/index.html
@@ -61,32 +61,32 @@
 <body>
 	<h1> Brandon C. Ruoff </h1>
 
-	<p class="center-whole">
+	<div class="center-whole">
 		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
 		<a href="sub-cites/pokemon.html" class="gray-button">  Pok&eacute;mon </a>
 		<a href="sub-cites/overwatch.html" class="gray-button">  Overwatch </a>
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
-	</p>
-	<p> <img src="pictures\FacebookProfilePicMarch2018.jpg"
-		class="profile-pic">
-	</p>
-	<img class="small-pic" id="imageId" src="https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg" >
-	<h2 class="center-whole white-text">
-		Contact me:
-	</h2>
-	<p class="center-whole white-text">
-	E-mail: brandoru15@gmail.com <br>
-	</p>
-	<p id="info" class="center-whole white-text">
-	Enter login credentials to access the secret section of Brandon's webpage. <br>
-	(Spoiler alert: This is the most insecure login page in the world. Feel free to "hack" into it.)
-	<form class="center white-text" action="sub-cites/game.html" method="get" onsubmit="return check_info();">
-		Username: <input type="text" name="username" id="username"/><br/>
-		Password: <input type="password" name="password" id="password"/><br/>
-		<input type="submit" value="Login"/><br/>
-	</form>
-	</p>
+		<div> 
+			<img class="profile-pic" src="pictures\FacebookProfilePicMarch2018.jpg">
+		</div>
+		<div>
+			<img class="small-pic" id="imageId" src="https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg" >
+		</div>
+		<h2 class="center-whole white-text"> Contact me: </h2>
+		<div class="center-whole white-text">
+		E-mail: brandoru15@gmail.com <br>
+		</div>
+		<div id="info" class="center-whole white-text">
+		Enter login credentials to access the secret section of Brandon's webpage. <br>
+		(Spoiler alert: This is the most insecure login page in the world. Feel free to "hack" into it.)
+		<form class="center white-text" action="sub-cites/game.html" method="get" onsubmit="return check_info();">
+			Username: <input type="text" name="username" id="username"/><br/>
+			Password: <input type="password" name="password" id="password"/><br/>
+			<input type="submit" value="Login"/><br/>
+		</form>
+		</div>
+	</div>
 	
 </body>
 </html>
