--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 <head>
 	<title> Brandon's Webpage </title>
 	<link rel="stylesheet" href="styles.css">
@@ -68,10 +68,10 @@
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
 		<div> 
-			<img class="profile-pic" src="pictures\FacebookProfilePicMarch2018.jpg">
+			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicMarch2018.jpg">
 		</div>
 		<div>
-			<img class="small-pic" id="imageId" src="https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg" >
+			<img class="small-pic" alt="Picture of Interest" id="imageId" src="https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg" >
 		</div>
 		<h2 class="center-whole white-text"> Contact me: </h2>
 		<div class="center-whole white-text">
