--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -8,36 +8,34 @@
 	
 	
 </head>
-<body>
+<body class="center-whole">
 	<h1> Computer Science </h2>
 	<br>
 	<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
-	<p class="center-whole"> 
-		View my Github account where I can share my programs with the world!
-	<h2 class="center-whole white-text">
+	<p"> View my Github account where I can share my programs with the world! </p>
 	
 	<h3> <a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a> </h3>
-	<p class="center-whole"> 
+	<p> 
 		Some practice problems to test my programming abilities.
-	<h2 class="center-whole white-text">
+	</p>
+	
+	<h2 class="white-text">
 		Projects:
 	</h2>
-	<p class="center-whole">
-	<h3> <a href="computer-science/hello_world_runnable.jar" download class="gray-button"> Hello world! </a> </h3>
-	<p class="center-whole"> 
-		Simply said, this download will make a window pop up that says "Hello!" It was my test to see if 
-		I could post executable code on my website for other people to try.
+	
+	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_1/index.html" class="gray-button"> CS 315 Internet Programming </a> </h3>
+
 	<h3> <a href="" class="gray-button"> Pok&eacute;mon Battle </a> </h3>
-	<p class="center-whole red-text">
+	<p class="red-text">
 		The game is still incomplete.
 	</p>
-	<p class="center-whole">
+	<p>
 		I know a lot about Pokemon, so I am attempting to build a simple battle simulator. It includes a variety of Pokemon to
 		choose from to create a full party of 6 Pokemon. The player faces off against an AI that represents me. Currently only
 		damage is implemented--status moves, special effects of moves, and abilities will come later.
 	</p>
 	<h3> <a href="computer-science/mini_calculator.jar" download class="gray-button"> Mini Calculator </a> </h3>
-	<p class="center-whole">
+	<p>
 		I built a simple Calculator program build from JFrame for one of my classes. It can take two numbers as input at a time in the following
 		format: 
 		</br></br>
