Added fixed strip on top of page and CS315 page

--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's CS Page</title>
 	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
-	
-	
 </head>
 <body class="center-whole">
+	<div class="top-strip">
+		<a href="../index.html" class="back-button"> Back </a>
+	</div>
 	<h1> Computer Science </h2>
 	<br>
 	<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
@@ -23,7 +23,7 @@
 		Projects:
 	</h2>
 	
-	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_1/index.html" class="gray-button"> CS 315 Internet Programming </a> </h3>
+	<h3> <a href="cs315index.html" class="gray-button"> CS 315 Internet Programming </a> </h3>
 
 	<h3> <a href="" class="gray-button"> Pok&eacute;mon Battle </a> </h3>
 	<p class="red-text">
