--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Brandon's Overwatch Page</title>
-	<a href="../index.html" class="gray-button"> Back </a>
 	<link rel="stylesheet" href="../styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
 <body>
+	<div class="top-strip">
+		<a href="../index.html" class="back-button"> Back </a>
+	</div>
 	<h1 class="center-whole"> Overwatch </h1>
 	<h2> <img class="small-pic overwatch-logo" src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951"> </h2>
 	<div class="yellow-outline">
