--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Brandon's Piano Page</title>
-	<a href="../index.html" class="gray-button"> Back </a>	
 	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+	<div class="top-strip">
+		<a href="../index.html" class="back-button"> Back </a>
+	</div>
 	<h1> Piano </h1>
 	<div class="center-whole">
 		<h2 class="white-text"> Songs I Can Play </h2>
