--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -3,10 +3,12 @@
 <head>
 	<title>Brandon's Pok&eacute;mon Page</title>
 	<link rel="stylesheet" href="../styles.css">
-	<a href="../index.html" class="gray-button"> Back </a>
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
+	<div class="top-strip">
+		<a href="../index.html" class="back-button"> Back </a>
+	</div>
 	<h1> Pok&eacute;mon </h1>
 	<br>
 	<div class="container">
