--- a/sub-cites/rocket-league.html
+++ b/sub-cites/rocket-league.html
@@ -13,7 +13,7 @@
 		<img class="heading" src="https://cdn.freebiesupply.com/logos/large/2x/rocket-league-logo-png-transparent.png" alt="Rocket League Logo">
 	</div>
 	<br><br>
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-left">
 		<div class="left-side-rl">
 			<span class="player-headline"> Brandon </span>
 			<br>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-right">
 		<div class="left-side-rl">
 			<span class="player-headline"> Logan </span>
 			<br>
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-left">
 		<div class="left-side-rl">
 			<span class="player-headline"> Jeremiyah </span>
 			<br>
@@ -100,7 +100,7 @@
 		</div>
 	</div>
 	
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-right">
 		<div class="left-side-rl">
 			<span class="player-headline"> Joshuah </span>
 			<br>
@@ -129,7 +129,7 @@
 		</div>
 	</div>
 	
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-left">
 		<div class="left-side-rl">
 			<span class="player-headline"> Joel </span>
 			<br>
@@ -158,7 +158,7 @@
 		</div>
 	</div>
 	
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-right">
 		<div class="left-side-rl">
 			<span class="player-headline"> Todd </span>
 			<br>
@@ -187,7 +187,7 @@
 		</div>
 	</div>
 	
-	<div class="dark-blue-outline">
+	<div class="dark-blue-outline-left">
 		<div class="left-side-rl">
 			<span class="player-headline"> Sam </span>
 			<br>
