Added assignment 3 for CS 315

--- a/sub-cites/cs315index.html
+++ b/sub-cites/cs315index.html
@@ -13,5 +13,6 @@
 	<h3> <a href="http://ice.truman.edu/~bcr7812/project/index315.html" class="gray-button"> Project </a> </h3>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_1/index.html" class="gray-button"> Assignment 1 </a> </h3>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_2/hw2start.html" class="gray-button"> Assignment 2 </a> </h3>
+	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_3/quiz.php" class="gray-button"> Assignment 3 </a> </h3>
 </body>
 </html>
