--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -63,8 +63,8 @@
 					<th> Generation 4</th>
 					<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3d/PokemonDiamondBox.jpg/220px-PokemonDiamondBox.jpg"> 
 						<img class="poke-game-cover" src="https://cf2.s3.souqcdn.com/item/2014/06/28/70/58/83/5/item_XL_7058835_5002134.jpg"> </td>
-						<td>Great starting Pok&eacute;mon<br><br>Very nostalgic music</td>
-						<td>Fewest new Pok&eacute;mon<br><br>HMs needed a lot</td>
+						<td>Great starting Pok&eacute;mon<br><br>Very nostalgic music<br><br>The underground</td>
+						<td>Fewest new Pok&eacute;mon<br><br>HMs required often</td>
 				</tr>
 				<tr>
 					<th> Generation 5</th>
