Added Pokemon team page with flexbox formatting

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Brandon's Pok&eacute;mon Page</title>
 	<link rel="stylesheet" href="../styles.css">
+	<link rel="stylesheet" href="styles-poke.css">
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
@@ -114,133 +115,93 @@
 		
 		
 		<div class="white-outline centering right-side-poke">
-		<h2 class="white-text"> The Main Team </h2>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
+			
+			<a href="poke-teams.html" class="top-left-white gray-text"> More Teams </a>
+			<h2 class="white-text"> The Main Team </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
+				<br>
+				<span class="yellow-text gray-button"> Galvantula </span>
+			</div>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
+				<br>
+				<span class="purple-text gray-button"> Noivern </span>	
+			</div>
 			<br>
-			<span class="yellow-text gray-button"> Galvantula </span>
-		</div>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
+				<br>
+				<span class="red-orange-text gray-button"> Rotom-Heat </span>
+			</div>
 			<br>
-			<span class="purple-text gray-button"> Noivern </span>	
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
+				<br>
+				<span class="turquoise-text gray-button"> Klinklang </span>
+			</div>
 			<br>
-			<span class="red-orange-text gray-button"> Rotom-Heat </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
+				<br>
+				<span class="light-pink-text gray-button"> Sylveon </span>
+			</div>
 			<br>
-			<span class="turquoise-text gray-button"> Klinklang </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/medicham.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
+				<br>
+				<span class="white-text gray-button"> Medicham
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				</span>
+			</div>
+			
 			<br>
-			<span class="light-pink-text gray-button"> Sylveon </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/medicham.gif">
+			
+			<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
+				<br>
+				<span class="almost-black-text gray-button"> Toucannon </span>
+			</div>
 			<br>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-midnight.gif">
+				<br>
+				<span class="tan-text gray-button"> Lycanroc </span>
+			</div>
 			<br>
-			<span class="white-text gray-button"> Medicham
-			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
-			</span>
-		</div>
-		
-		<br>
-		
-		<h2 class="white-text"> The Sand Gym Team </h2>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/hippowdon.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
+				<br>
+				<span class="white-text gray-button"> Ninetales </span>	
+			</div>
 			<br>
-			<span class="tan-text gray-button"> Hippowdon </span>
-		</div>
-		<br>
-		<div>
-			<img src="https://play.pokemonshowdown.com/sprites/xyani/gastrodon-east.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Wishiwashi </span>
+			</div>
 			<br>
-			<span class="turquoise-text gray-button"> Gastrodon </span>	
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/excadrill.gif">
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
+				<br>
+				<span class="sand-text gray-button"> Palossand </span>
+			</div>
 			<br>
-			<span class="maroon-text gray-button"> Excadrill </span>
-		</div>
-		<br>
-		<div>
-		<br>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/nidoking.gif">
-			<br>
-			<span class="purple-text gray-button"> Nidoking </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/gliscor.gif">
-			<br>
-			<span class="lavender-text gray-button"> Gliscor </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp.gif">
-			<br>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp-mega.gif">
-			<br>
-			<span class="draco-text gray-button"> Garchomp
-			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
-			</span>
-		</div>
-		
-		<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun </h2>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
-			<br>
-			<span class="almost-black-text gray-button"> Toucannon </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
-			<br>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
-			<br>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-midnight.gif">
-			<br>
-			<span class="tan-text gray-button"> Lycanroc </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
-			<br>
-			<span class="white-text gray-button"> Ninetales </span>	
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi.gif">
-			<br>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
-			<br>
-			<span class="light-blue-text gray-button"> Wishiwashi </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
-			<br>
-			<span class="sand-text gray-button"> Palossand </span>
-		</div>
-		<br>
-		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
-			<br>
-			<span class="red-text gray-button"> Incineroar </span>
-		</div>
-	</div>	
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
+				<br>
+				<span class="red-text gray-button"> Incineroar </span>
+			</div>
+		</div>	
 	</div>
 </body>
 </html>
